--- a/resources/assets/sass/welcome.scss
+++ b/resources/assets/sass/welcome.scss
@@ -67,5 +67,6 @@ a:hover {
     padding-right: 0.8rem;
     padding-top: 0.15rem;
     padding-bottom: 0.15rem;
+    margin-right: -22px;
   }
 }
